--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Index.cshtml
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Index.cshtml
@@ -13,25 +13,11 @@
     @Html.ActionLink("Skapa ny", "Create", null, null, new { @class = "mox-button", onclick = "openModalForm(this, event)" })
 </p>
 
-@await Html.PartialAsync("Mox/UI/DataTable", Model)
-
-@* Hämta listan med ajax!
-    <script>
-        var request = new XMLHttpRequest();
-        request.open("GET", '@Url.Action("Index")', true);
-        request.setRequestHeader('Content-Type', 'application/json');
-        request.onreadystatechange = function (event) {
-            if (request.readyState == 4) {
-                var data = JSON.parse(request.responseText);
-                console.log(data);
-            }
-        };
-        request.send()
-    </script>
-*@
+<div id="js-table"></div>
 
 <script>
-
+    var dataTable = null;
+    
     function openModalForm(sender, event) {
         event.preventDefault();
 
@@ -40,51 +26,26 @@
                 if(button.tagName === 'A') {
                     modal.replaceContent(button.href);
                 }
+            },
+            onSubmit: function(modal, form, event) {
+                console.log(modal, form, event);
+                dataTable.refresh();
             }
         });
     }
 
-    var editButtons = Mox.Utils.DOM.collectionOfToArray(document.querySelectorAll('.mox-datatable td a'));
-    editButtons.forEach(function (button) {
-        button.addEventListener('click', function (event) { openModalForm(button, event) });
-    });
-/*
-    function openModalForm(sender, event) {
-        event.preventDefault();
-
-        Mox.UI.Modal.createDialog(sender.href).then(function (modal) {
-            function setupEvents() {
-                var form = modal.contentContainer.querySelector('form');
-                if(form)
-                    form.addEventListener('submit', submitForm);
-
-                var editButtons = Mox.Utils.DOM.collectionOfToArray(modal.contentContainer.querySelectorAll('a'));
+    document.addEventListener('DOMContentLoaded', function() {
+        Mox.UI.DataTable.create({
+            container: document.getElementById('js-table'),
+            url: '@Url.Action("Table")',
+            onRenderComplete: function(dataTable) {
+                var editButtons = Mox.Utils.DOM.collectionOfToArray(dataTable.containerElement.querySelectorAll('.mox-datatable td a'));
                 editButtons.forEach(function (button) {
-                    console.log(button);
-                    button.addEventListener('click', function (event) { event.preventDefault(); modal.replaceContent(event.target.href).then(setupEvents); }); // modal.close(); openModalForm(button, event); });
+                    button.addEventListener('click', function (event) { openModalForm(button, event) });
                 });
             }
-
-            function submitForm(event) {
-                event.preventDefault();
-
-                Mox.Utils.Fetch.submitForm(event, function(url) {
-                    modal.close();
-                    window.location.href = window.location.href;
-                }).then(function (text) {
-                    modal.contentContainer.innerHTML = text;
-                    setupEvents();
-                }).catch(function (error) {
-                    console.log(error);
-                });
-            }
-
-            setupEvents();
+        }).then(function(_dataTable) {
+            dataTable = _dataTable;
         });
-    }
-
-    var editButtons = Mox.Utils.DOM.collectionOfToArray(document.querySelectorAll('.mox-datatable td a'));
-    editButtons.forEach(function (button) {
-        button.addEventListener('click', function (event) { openModalForm(button, event) });
-    });*/
+    });
 </script>
