--- a/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
+++ b/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
@@ -95,13 +95,15 @@ h4, h5, h6 { font-size: 1rem; }
 ***************************************************************/
 .mox-datatable { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
 .mox-datatable a { text-decoration: none; color: #24292e; }
-.mox-datatable tr th { padding: 0; padding-bottom: 10px; text-align: left; }
+.mox-datatable tr th { padding: 0; text-align: left; background-color: #f5f5f8; }
 .mox-datatable tr th > a,
-.mox-datatable tr th > span { padding: 15px 10px 17px; display: block; border-bottom: 1px solid #eaeaea; border-top: 1px solid #eaeaea; font-weight: 500; }
-.mox-datatable tr td { text-align: left; padding: 0; }
+.mox-datatable tr th > span { padding: 8px 10px; display: block; border-bottom: 1px solid #eaeaea; border-top: 1px solid #eaeaea; font-weight: 500; }
+.mox-datatable tr td { text-align: left; padding: 0; border-bottom: 1px solid #eaeaea; }
 .mox-datatable tr td a { padding: 8px 10px; display: block; }
 .mox-datatable tr td span { padding: 8px 10px; display: block; }
-.mox-datatable tr:nth-of-type(2n+1) td { background-color: #f5f5f8; }
+
+.mox-datatable-empty { font-weight: 500; text-align: center; padding: 8px 10px; background-color: #f5f5f8; border-bottom: 1px solid #eaeaea; border-top: 1px solid #eaeaea; }
+.mox-datatable-loader { background-image: url('/static/mox/svg/loader-button-black.svg'); height: 40px; background-position: center; background-size: 28px; background-repeat: no-repeat; }
 
 .mox-datatable tr th.buttons { width: 180px; }
 .mox-datatable tr td.buttons .buttons-list { list-style: none; padding: 0 8px; margin: 0; text-align: right; }
@@ -123,18 +125,17 @@ h4, h5, h6 { font-size: 1rem; }
 
 .mox-pager { list-style: none; margin: 0; padding: 0; border-radius: 3px; border: 1px solid #cacaca; display: inline-block; }
 .mox-pager li { display: block; float: left; text-align: center; }
-.mox-pager li a { text-decoration: none; color: #24292e; display: block; padding: 8px 12px; font-weight: 500; }
-
+.mox-pager li a { text-decoration: none; color: #24292e; display: block; padding: 6px 4px; font-weight: 500; min-width: 28px; }
+.mox-pager li.disabled a { color: #bbb; pointer-events: none; }
 .mox-pager li.selected,
-.mox-pager li:hover { background-color: #f5f5f8; }
+.mox-pager li:not(.disabled):hover { background-color: #f5f5f8; }
 
 .mox-pager li+li { border-left: 1px solid #cacaca; }
 
-.mox-content .filters { margin-bottom: 30px; border-bottom: 1px solid #eee; border-top: 1px solid #eee; background-color: #fafafa; padding: 5px 10px; }
-.mox-content .filters form { max-width: unset; }
-.mox-content .filters form > span { margin-right: 20px; padding: 0.4em 0; display: inline-block; }
-.mox-content .filters form > span select { padding: 2px 5px; }
-.mox-content .filters .right { float: right; }
+.mox-content .mox-filters { display: flex; flex-direction: row; list-style: none; padding: 0; margin: 0; margin-top: 10px; margin-bottom: -10px; flex-wrap: wrap; }
+.mox-content .mox-filters input[type=text] { box-sizing: border-box; border: 1px solid #cacaca; padding: 4.5px; border-radius: 3px; margin: 0; line-height: 17px; }
+.mox-content .mox-filters > li { margin-bottom: 10px; }
+.mox-content .mox-filters > .break { flex-grow: 1; }
 
 .mox-datatable.clean tr:nth-of-type(2n+1) td { background-color: #fff; }
 .mox-datatable.clean tr th > a, .mox-datatable.clean tr th > span { padding: 4px 8px; border: 0; font-weight: normal; font-size: 0.85em }
@@ -160,6 +161,8 @@ h4, h5, h6 { font-size: 1rem; }
 
 .mox-message { border-radius: 3px; padding: 10px 20px; padding-left: 20px; border: 1px solid #94b6af; border-left: 5px solid #20bea1; background-image: url('/static/mox/svg/message-check.svg'); background-size: 24px; background-position: 14px center; background-repeat: no-repeat; padding-left: 55px; }
 .mox-message p { margin: 0; }
+.mox-message-neutral { border-radius: 3px; padding: 10px 20px; padding-left: 20px; border: 1px solid #bbc; border-left: 5px solid #bbc; }
+.mox-message-neutral p { margin: 0; }
 
 .validation-summary-errors { background-color: #faa; border-radius: 3px; padding: 10px 20px; }
 .validation-summary-errors ul { list-style: none; padding: 0; margin: 0; }
@@ -198,10 +201,11 @@ h4, h5, h6 { font-size: 1rem; }
 /**************************************************************
     MENUS
 ***************************************************************/
-.mox-content .mox-menu { display: block; list-style: none; padding: 0; margin: 0; margin-bottom: 25px; border-bottom: 2px solid #6a737d; }
+.mox-content .mox-menu { display: block; list-style: none; padding: 0; margin: 0; margin-bottom: 20px; border-bottom: 1px solid #eaeaea; }
 .mox-content .mox-menu li { display: inline-block; margin-right: 5px; padding: 0; }
-.mox-content .mox-menu li a { padding: 0.5em 0.7em; background-color: #eee; display: block; text-decoration: none; color: #24292e; }
-.mox-content .mox-menu li a.selected { background-color: #6a737d; color: #fff; }
+.mox-content .mox-menu li a { padding: 0.9em 0.7em; display: block; text-decoration: none; color: #666; border-bottom: 2px solid transparent; border-top: 2px solid transparent; transition: border-bottom .2s, color .2s; }
+.mox-content .mox-menu li a:hover { border-bottom: 2px solid #999; color: #24292e; }
+.mox-content .mox-menu li a.selected { border-bottom: 2px solid #20bea1; color: #24292e; }
 
 .mox-breadcrumbs { list-style: none; padding: 0; margin: 0; display: block; margin-bottom: -16px; }
 .mox-breadcrumbs li { display: inline-block; color: #a9a9a9; font-weight: 500; }
@@ -215,6 +219,7 @@ h4, h5, h6 { font-size: 1rem; }
 ***************************************************************/
 .mox-modal { position: fixed; top: 0; bottom: 0; left: 0; right: 0; transition: opacity .2s; opacity: 1; z-index: 100; }
 .mox-modal-shadow { overflow-y: auto; position: absolute; top: 0; bottom: 0; left: 0; right: 0; background-color: rgba(0, 0, 0, 0.4); }
+.mox-modal-shadow.loading:before { display: block; content: ''; position: absolute; top: calc(5vh + 100px); left: calc(50% - 30px); background width: 60px; height: 60px; background-image: url('/static/mox/svg/loader-button-white.svg'); background-size: 28px; background-repeat: no-repeat; background-position: center; }
 .mox-modal-wrapper { width: 100%; max-width: 600px; margin: 5vh auto; background-color: #fff; border-radius: 5px; box-sizing: border-box; box-shadow: rgba(0, 0, 0, 0.25) 0 0 20px; position: relative; overflow: hidden; transition: opacity .2s, transform .2s; }
 .mox-modal-content { overflow-y: auto; box-sizing: border-box; }
 .mox-modal-content.mox-content { padding-bottom: 16px; background-color: unset; }
