--- a/src/Examples/Mindbite.Mox.NotificationCenter/Areas/NotificationCenter/Views/Subscriptions/Index.cshtml
+++ b/src/Examples/Mindbite.Mox.NotificationCenter/Areas/NotificationCenter/Views/Subscriptions/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "Mox/_Layout";
 }
 
-@Html.Partial("Mox/UI/AppBreadCrumbs")
+@await Html.PartialAsync("Mox/UI/AppBreadCrumbs")
 
 <h1>Följer</h1>
 
