--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Display.cshtml
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Display.cshtml
@@ -6,12 +6,12 @@
 
 @if (!this.Context.Request.IsAjaxRequest())
 {
-    @Html.Partial("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
+    @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
 }
 
 <h1>@Model.Title</h1>
 
-@Html.Partial("_DisplayMenu")
+@await Html.PartialAsync("_DisplayMenu")
 
 <p>
     @Html.ActionLink("Redigera", "Edit", null, new { id = Model.Id }, new { @class = "mox-button" })
