--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Index.cshtml
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "Mox/_Layout";
 }
 
-@Html.Partial("Mox/UI/AppBreadCrumbs")
+@await Html.PartialAsync("Mox/UI/AppBreadCrumbs")
 
 <h1>Mina designs</h1>
 
