--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/RoleManagement/Index.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/RoleManagement/Index.cshtml
@@ -6,7 +6,7 @@
 @model Mindbite.Mox.UI.IDataTable
 @inject IStringLocalizer localizer
 
-@Html.Partial("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = false }.ToExpando())
+@await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = false }.ToExpando())
 
 <h1>@localizer["Behörigheter"]</h1>
 
