--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Create.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Create.cshtml
@@ -6,7 +6,7 @@
 @model Mindbite.Mox.Identity.ViewModels.CreateUserViewModel
 @inject IStringLocalizer localizer
 
-@Html.Partial("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
+@await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
 
 <h1>@localizer["Skapa användare"]</h1>
 
