Login via magic link

--- a/src/Mindbite.Mox.Core/Areas/Mox/Views/Home/Error.cshtml
+++ b/src/Mindbite.Mox.Core/Areas/Mox/Views/Home/Error.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
-    Layout = "Mox/_Layout";
     var errorCode = ViewData["ErrorCode"] as string;
+    var isAuthenticated = (bool)ViewData["IsAuthenticated"];
+    if (isAuthenticated)
+    {
+        Layout = "Mox/_Layout";
+    }
 }
 
 <div style="text-align: center;">
