--- a/src/Mindbite.Mox.Identity/wwwroot/identity/css/base.css
+++ b/src/Mindbite.Mox.Identity/wwwroot/identity/css/base.css
@@ -1,4 +1,5 @@
 html, body { margin: 0; padding: 0; top: 0; bottom: 0; left: 0; right: 0; position: absolute; font-size: 14px; background-image: url('https://online.mindbite.se/clientfiles/gfx/gui/bgsignonclouds.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; color: #24292e; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
+input, select, textarea, button { font-family:inherit; }
 
 .mox-login { background-color: #fafafa; border: 0; padding: 0; width: 100%; max-width: 400px; margin: 200px auto 0; border-radius: 3px; overflow: hidden; }
 .mox-login fieldset { border: 0; padding: 10px 20px; }
@@ -17,19 +18,33 @@ html, body { margin: 0; padding: 0; top: 0; bottom: 0; left: 0; right: 0; positi
 
 .mox-login fieldset p input[type=file] { width: 100%; box-sizing: border-box; }
 
+
+a.mox-login-button,
 .mox-login fieldset input[type=submit],
-.mox-login fieldset button.save { cursor: pointer; padding: 9px 10px; border: 0; border-radius: 3px; background-color: #20bea1; text-decoration: none; color: #fff; font-weight: 500; display: block; width: 100%; box-sizing: border-box; font-size: 1rem; }
+.mox-login fieldset button.save { -webkit-appearance: none; -moz-appearance: none; appearance: none; cursor: pointer; margin: 0; line-height: 19px; padding: 9px 10px; border: 0; border-radius: 3px; background-color: #20bea1; text-decoration: none; color: #fff; font-weight: 500; display: block; width: 100%; box-sizing: border-box; font-size: 1rem; }
+a.mox-login-button:hover,
 .mox-login fieldset input[type=submit]:hover,
 .mox-login fieldset button.save:hover { background-color: #1dab91; }
+
+
+a.mox-login-button.plain,
+.mox-login fieldset input[type=submit].plain,
+.mox-login fieldset button.save.plain { background-color: #ccc; color: #24292e; }
+a.mox-login-button.plain:hover,
+.mox-login fieldset input[type=submit].plain:hover,
+.mox-login fieldset button.save.plain:hover { background-color: #bbb; }
 
 .mox-login fieldset ul.checkbox { list-style: none; margin: 0; padding: 0; }
 .mox-login fieldset ul.checkbox li { display: block; }
 
-.mox-login fieldset a { display: block; color: #000; text-align: center; margin-top: 10px; }
+a { display: block; color: #000; text-align: center; margin-top: 10px; }
 
 .mox-login input[type=checkbox] { width: 16px; height: 16px; padding: 0; margin:0; vertical-align: middle; position: relative; top: -1px; }
 
 .mox-login-background-overlay { position: absolute; top: 0; bottom: 0; left: 0; right: 0; background-color: rgba(0, 0, 0, 0.5); }
+
+.mox-login-col2 { display: flex; margin: 1em -5px; }
+.mox-login-col2 > * { width: 50%; margin: 0 5px; }
 
 .validation-summary-errors { background-color: #faa; padding: 10px 20px; border-radius: 3px; }
 .validation-summary-errors ul { margin: 0; list-style: none; padding: 0; }
