--- a/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
+++ b/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
@@ -87,6 +87,9 @@ h4, h5, h6 { font-size: 1rem; }
 .mox-button.save { background-color: #efe; }
 .mox-button.save:hover { background-color: #cec; }
 
+.mox-button.plain { background-color: #eee; color: #24292e; }
+.mox-button.plain:hover { background-color: #cacaca; }
+
 .mox-header-apps-button:hover { cursor: pointer; transition: transform .125s ease-out; transform: rotate(-10deg); animation: swag .5s ease-in-out infinite; animation-delay: .125s; }
 @keyframes swag { 0% { transform: rotate(-10deg); } 50% { transform: rotate(10deg); } 100% { transform: rotate(-10deg); } }
 
@@ -133,9 +136,13 @@ h4, h5, h6 { font-size: 1rem; }
 .mox-pager li+li { border-left: 1px solid #cacaca; }
 
 .mox-content .mox-filters { display: flex; flex-direction: row; list-style: none; padding: 0; margin: 0; margin-top: 10px; margin-bottom: 0; flex-wrap: wrap; }
-.mox-content .mox-filters input[type=text] { box-sizing: border-box; border: 1px solid #cacaca; padding: 4.5px; border-radius: 3px; margin: 0; line-height: 17px; }
+.mox-content .mox-filters input[type=text],
+.mox-content .mox-filters input[type=date],
+.mox-content .mox-filters input[type=number] { box-sizing: border-box; border: 1px solid #cacaca; padding: 4.5px; border-radius: 3px; margin: 0; line-height: 17px; }
+.mox-content .mox-filters select { box-sizing: border-box; border: 1px solid #cacaca; padding: 0 4.5px; border-radius: 3px; margin: 0; height: 28px; }
 .mox-content .mox-filters > li { margin-bottom: 10px; }
 .mox-content .mox-filters > .break { flex-grow: 1; }
+.mox-content .mox-filters > .spacing { padding-right: 10px; border-right: 1px solid #eee; margin-right: 10px; }
 
 .mox-datatable.clean tr:nth-of-type(2n+1) td { background-color: #fff; }
 .mox-datatable.clean tr th > a, .mox-datatable.clean tr th > span { padding: 4px 8px; border: 0; font-weight: normal; font-size: 0.85em }
@@ -169,7 +176,7 @@ h4, h5, h6 { font-size: 1rem; }
 .field-validation-error { color: #f33; }
 
 .mox-content fieldset { border: 0; padding: 0; margin-bottom: 15px; }
-.mox-content fieldset legend { padding: 0; display: block; font-size: 20px; margin-bottom: 10px; }
+.mox-content fieldset legend { padding: 0; display: block; font-size: 20px; margin-bottom: 0; }
 
 .mox-content fieldset p label { display: inline-block; margin-bottom: 4px; }
 .mox-content fieldset p input[type=text],
@@ -188,9 +195,13 @@ h4, h5, h6 { font-size: 1rem; }
 
 .mox-content fieldset a.cancel { text-decoration: none; color: #333; margin-left: 20px; }
 
-.mox-content fieldset ul.checkbox { list-style: none; margin: 0; padding: 0; }
+.mox-content fieldset ul.checkbox { list-style: none; margin: 1em 0; padding: 0; display: inline-block; }
 .mox-content fieldset ul.checkbox li { display: block; }
 
+.mox-content fieldset.buttons { width: 100%; box-sizing: border-box; }
+
+.mox-hidden-if-not-checked { display: none; padding-top: 10px; margin-bottom: 30px; }
+input[type="checkbox"]:checked ~ .mox-hidden-if-not-checked { display: block; }
 
 /**************************************************************
     DISPLAY
@@ -243,3 +254,12 @@ h4, h5, h6 { font-size: 1rem; }
 .mox-content fieldset button.save { background-position-x: -16px; transition: padding-left .2s, background-position .2s; }
 .mox-content fieldset input[type=submit].loading,
 .mox-content fieldset button.save.loading { padding-left: 28px; background-image: url('/static/mox/svg/loader-button-white.svg'); background-position: 6px center; background-size: 16px; background-repeat: no-repeat; }
+
+@media (pointer: coarse) {
+    .mox-content fieldset ul.checkbox { display: block; }
+    .mox-content fieldset ul.checkbox li { display: flex; align-items: center; }
+    .mox-content input[type="checkbox"] { transform: scale(1.3); margin: 10px 8px 10px 0; }
+
+    .mox-datatable tr td a,
+    .mox-datatable tr td span { padding: 12px 10px; }
+}
