--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Edit.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Edit.cshtml
@@ -100,14 +100,35 @@
     <fieldset>
         <legend>@localizer["Behörigheter"]</legend>
 
-        <ul class="checkbox">
+        @if (Model.RolesDisabled)
+        {
+            <p>
+                @localizer["RolesDisabledDescription"]
+                @if (!string.IsNullOrWhiteSpace(Model.RolesDisabledLink))
+                {
+                <a href="@Model.RolesDisabledLink">@localizer["RolesDisabledLinkTitle"]</a>
+                }
+            </p>
+        }
+
+        <ul class="checkbox" id="js-groups">
             @for (var i = 0; i < Model.Roles.Length; i++)
             {
-                <li>
+                <li class="mox-group-depth-@Model.Roles[i].Depth @(Model.Roles[i].IsParent ? "mox-group-parent" : "")">
                     @Html.HiddenFor(model => model.Roles[i].Id)
                     @Html.HiddenFor(model => model.Roles[i].Name)
-                    @Html.CheckBoxFor(model => model.Roles[i].Checked)
-                    @Html.LabelFor(model => model.Roles[i].Checked, localizer[$"role_{Model.Roles[i].Name}"])
+                    @Html.HiddenFor(model => model.Roles[i].Depth)
+                    @Html.HiddenFor(model => model.Roles[i].IsParent)
+                    @if (Model.Roles[i].Disabled)
+                    {
+                        @Html.HiddenFor(x => x.Roles[i].Checked)
+                        @Html.CheckBoxFor(model => model.Roles[i].Checked, new { disabled = "disabled" })
+                    }
+                    else
+                    {
+                        @Html.CheckBoxFor(model => model.Roles[i].Checked, new { disabled = "disabled", onclick = $"Mox.UI.CheckboxTree.onClick(document.getElementById('js-groups'), this, '{Model.Roles[i].Id}');", data_id = Model.Roles[i].Id })
+                    }
+                    @Html.LabelFor(model => model.Roles[i].Checked, Model.Roles[i].Name)
                 </li>
             }
         </ul>
