--- a/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
+++ b/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
@@ -140,9 +140,11 @@ h4, h5, h6 { font-size: 1rem; }
 .mox-content .mox-filters input[type=date],
 .mox-content .mox-filters input[type=number] { box-sizing: border-box; border: 1px solid #cacaca; padding: 4.5px; border-radius: 3px; margin: 0; line-height: 17px; }
 .mox-content .mox-filters select { box-sizing: border-box; border: 1px solid #cacaca; padding: 0 4.5px; border-radius: 3px; margin: 0; height: 28px; }
-.mox-content .mox-filters > li { margin-bottom: 10px; }
+.mox-content .mox-filters > li { margin-bottom: 10px; margin-right: 5px; }
 .mox-content .mox-filters > .break { flex-grow: 1; }
 .mox-content .mox-filters > .spacing { padding-right: 10px; border-right: 1px solid #eee; margin-right: 10px; }
+
+.mox-table-scroll-wrapper { margin: 0 -16px; padding: 0 16px; overflow-x: auto; }
 
 .mox-datatable.clean tr:nth-of-type(2n+1) td { background-color: #fff; }
 .mox-datatable.clean tr th > a, .mox-datatable.clean tr th > span { padding: 4px 8px; border: 0; font-weight: normal; font-size: 0.85em }
@@ -182,10 +184,21 @@ h4, h5, h6 { font-size: 1rem; }
 
 .mox-content fieldset > p:first-child { margin-top: 0; }
 .mox-content fieldset p label { display: inline-block; margin-bottom: 4px; }
-.mox-content fieldset p input[type=text],
-.mox-content fieldset p input[type=password],
-.mox-content fieldset p input[type=date],
-.mox-content fieldset p input[type=time],
+
+.mox-content fieldset p input[type="color"],
+.mox-content fieldset p input[type="date"],
+.mox-content fieldset p input[type="datetime"],
+.mox-content fieldset p input[type="datetime-local"],
+.mox-content fieldset p input[type="email"],
+.mox-content fieldset p input[type="month"],
+.mox-content fieldset p input[type="number"],
+.mox-content fieldset p input[type="password"],
+.mox-content fieldset p input[type="search"],
+.mox-content fieldset p input[type="tel"],
+.mox-content fieldset p input[type="text"],
+.mox-content fieldset p input[type="time"],
+.mox-content fieldset p input[type="url"],
+.mox-content fieldset p input[type="week"],
 .mox-content fieldset p select,
 .mox-content fieldset p textarea { width: 100%; box-sizing: border-box; border: 1px solid #cacaca; padding: 5px 8px; border-radius: 3px; }
 .mox-content fieldset p input[type=file] { width: 100%; box-sizing: border-box; }
@@ -206,12 +219,55 @@ h4, h5, h6 { font-size: 1rem; }
 input[type="checkbox"]:checked ~ .mox-hidden-if-not-checked { display: block; }
 .mox-hidden-if-not-checked > p:first-of-type { margin-top: 0; }
 
+input[type="date"] { display: block; -webkit-appearance: textfield; -moz-appearance: textfield; appearance: textfield; min-height: 1.2em; }
+
+input[type="color"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+select,
+textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; }
+
+input[type="color"]:read-only,
+input[type="date"]:read-only,
+input[type="datetime"]:read-only,
+input[type="datetime-local"]:read-only,
+input[type="email"]:read-only,
+input[type="month"]:read-only,
+input[type="number"]:read-only,
+input[type="password"]:read-only,
+input[type="search"]:read-only,
+input[type="tel"]:read-only,
+input[type="text"]:read-only,
+input[type="time"]:read-only,
+input[type="url"]:read-only,
+input[type="week"]:read-only,
+textarea:read-only { background-color: #e3e3e3; opacity: 0.5; }
+
 /**************************************************************
     DISPLAY
 ***************************************************************/
 .mox-display {  }
 .mox-display label { display: block; margin-bottom: 4px; margin-top: 15px; }
 .mox-display-content { padding: 5px 8px; background-color: #fafafe; border-radius: 3px; white-space: pre-line; border: 1px solid #f0f0f0; line-height: 1.5em; }
+
+.mox-content-infobox { background-color: #f5f5f8; display: flex; flex-direction: row; padding: 10px 16px; border-radius: 3px; border: 1px solid #eaeaea; margin-bottom: 10px; }
+.mox-content-infobox > .column { display: flex; flex-direction: column; margin-right: 50px; flex-wrap: wrap; }
+.mox-content-infobox a { color: #005; }
+dl { display: flex; flex-direction: column; margin: 0; }
+dt { font-size: 12px; color: #888; margin-bottom: 2px; white-space: nowrap; }
+dd { margin: 0; color: #000; word-break: keep-all; }
+dd + dt { margin-top: 10px; }
 
 
 /**************************************************************
@@ -259,10 +315,40 @@ input[type="checkbox"]:checked ~ .mox-hidden-if-not-checked { display: block; }
 .mox-content fieldset button.save.loading { padding-left: 28px; background-image: url('/static/mox/svg/loader-button-white.svg'); background-position: 6px center; background-size: 16px; background-repeat: no-repeat; }
 
 @media (pointer: coarse) {
+
+    .mox-breadcrumbs { padding: 10px 0; margin: -10px 0; margin-bottom: -26px; overflow-x: auto; white-space: nowrap; scrollbar-width: none; }
+    .mox-breadcrumbs::-webkit-scrollbar { display: none; }
+    .mox-breadcrumbs li:first-of-type { }
+    .mox-breadcrumbs li:last-of-type { margin-right: 10px; }
+
     .mox-content fieldset ul.checkbox { display: block; }
     .mox-content fieldset ul.checkbox li { display: flex; align-items: center; }
     .mox-content input[type="checkbox"] { transform: scale(1.3); margin: 10px 8px 10px 0; }
 
     .mox-datatable tr td a,
     .mox-datatable tr td span { padding: 12px 10px; }
+
+    input[type="color"],
+    input[type="date"],
+    input[type="datetime"],
+    input[type="datetime-local"],
+    input[type="email"],
+    input[type="month"],
+    input[type="number"],
+    input[type="password"],
+    input[type="search"],
+    input[type="tel"],
+    input[type="text"],
+    input[type="time"],
+    input[type="url"],
+    input[type="week"],
+    select,
+    select:focus,
+    textarea { font-size: 16px !important; }
+
+    .mox-content fieldset input[type="submit"], .mox-content fieldset button.save { padding: 8px 14px; }
+    .mox-button { padding: 8px 14px; }
+
+    .mox-content .mox-filters input[type="text"], .mox-content .mox-filters input[type="date"], .mox-content .mox-filters input[type="number"] { height: 32px; line-height: 32px; }
+    .mox-content .mox-filters select { height: 32px; }
 }
