--- a/src/Mindbite.Mox.Identity/wwwroot/identity/css/mox_base_mobile.css
+++ b/src/Mindbite.Mox.Identity/wwwroot/identity/css/mox_base_mobile.css
@@ -1,1 +1,4 @@
-﻿.mox-header-right-menu-item .identity-menu { top: initial; right: initial; left: 5px; bottom: 40px; }
+﻿.mox-header-right-menu-item .identity-menu { top: initial; right: initial; left: 5px; bottom: 50px; }
+.mox-header-right-menu { height: 50px; }
+.mox-header-right-menu-list { height: 50px; }
+.mox-header-right-menu-item .identity { width: 40px; height: 40px; line-height: 40px; }
